--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -74,7 +74,7 @@
   margin-top: 0.4rem;
   margin-bottom: 0.6rem;
   flex-wrap: wrap;
-  padding: 0 0.5rem;
+
 }
 
 .project-btn {
@@ -181,10 +181,9 @@
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  margin-top: 0.8rem;
   flex-wrap: wrap;
   flex-shrink: 0;
-  padding-bottom: 0.5rem;
+  padding-bottom: 10.5rem;
   height: 60px;
 }
 
@@ -215,21 +214,26 @@
 @media (max-width: 768px) {
   .projects-container {
     height: auto;
-    padding-bottom: 8rem;
-    min-height: 140vh;
+    min-height: unset;
+    padding-bottom: 1rem;
+    overflow-y: auto;
+    max-height: 100vh;
   }
-  
   .projects-grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
-    padding: 3rem 1rem;
-    min-height: 120vh;
+    min-height: unset;
+    height: auto;
+    overflow: visible;
+    padding: 1.2rem 1rem 0.2rem 1rem;
   }
   
   .project-card {
     border-radius: 16px;
     height: 320px;
     max-width: 100%;
+  }
+  
+  .project-main-image {
+    height: 60%;
   }
   
   .project-title {
@@ -291,7 +295,9 @@
   
   .pagination {
     gap: 0.3rem;
-    margin-top: 1.5rem;
+    margin: 0.7rem 0 0.7rem 0;
+    padding-bottom: 0.2rem;
+    padding-top: 0.2rem;
   }
   
   .pagination button {
